Fix layout overflow in Safari

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -13,10 +13,6 @@ a {
     color: rgb(137, 174, 216);
 }
 
-#app {
-    height: 100%;
-}
-
 .app {
     height: 100%;
     display: flex;
